--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,21 +23,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
         android:text="Red Cross Reform"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/im_redcross"
         app:layout_constraintTop_toTopOf="@+id/im_redcross" />
 
     <TextView
         android:id="@+id/tv_message"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="The leading app for Australia's First Citizen Scientists"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/im_redcross"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/tv_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
@@ -53,8 +54,7 @@
         android:inputType="textEmailAddress"
         android:padding="5dp"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/im_redcross"
         app:layout_constraintTop_toBottomOf="@+id/tv_welcomemsg" />
 
     <EditText
@@ -79,7 +79,6 @@
         android:layout_marginTop="50dp"
         android:text="Welcome!"
         android:textColor="#000000"
-        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/im_redcross"
         app:layout_constraintTop_toBottomOf="@+id/im_redcross" />
@@ -90,13 +89,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Sign In to continue"
-        android:textSize="14sp"
+        android:textSize="8sp"
         app:layout_constraintStart_toStartOf="@+id/tv_welcome"
         app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="110dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:lineSpacingExtra="14sp"
@@ -112,10 +111,12 @@
         android:id="@+id/tv_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginTop="15dp"
         android:text="New User?"
         android:textColor="@color/black"
-        android:textSize="12sp"
+        android:textSize="8sp"
         app:layout_constraintStart_toStartOf="@+id/btn_login"
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
@@ -123,10 +124,24 @@
         android:id="@+id/tv_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="15dp"
         android:text="Sign Up"
         android:textColor="@color/red"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@+id/btn_login"
-        app:layout_constraintTop_toTopOf="@+id/tv_msg" />
+        android:textSize="8sp"
+        app:layout_constraintStart_toEndOf="@+id/tv_msg"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+
+    <ImageView
+        android:id="@+id/iv_loginPhoto"
+        android:layout_width="70dp"
+        android:layout_height="62dp"
+        android:layout_marginBottom="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_email"
+        app:layout_constraintEnd_toEndOf="@+id/tv_email"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toEndOf="@+id/tv_welcome"
+        tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
