--- a/app/src/main/res/layout/popup_add_post.xml
+++ b/app/src/main/res/layout/popup_add_post.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="350dp"
     android:layout_height="600dp"
-    android:layout_marginTop="60dp"
     android:layout_gravity="center"
+    android:layout_marginTop="60dp"
     android:background="@color/grey"
     android:orientation="vertical"
     android:padding="5dp">
@@ -39,31 +39,17 @@
         android:inputType="textPersonName"
         android:padding="5dp"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cv_popupprofile" />
-
-    <EditText
-        android:id="@+id/popup_location"
-        android:layout_width="300dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/postscreentextviews"
-        android:ems="10"
-        android:hint="Insert Location"
-        android:inputType="textPersonName"
-        android:padding="5dp"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/popup_title" />
+        app:layout_constraintTop_toBottomOf="@+id/cv_popupprofile"
+        app:layout_constraintVertical_bias="0.015" />
 
     <EditText
         android:id="@+id/popup_description"
         android:layout_width="300dp"
         android:layout_height="130dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="52dp"
         android:background="@drawable/postscreentextviews"
         android:ems="10"
         android:gravity="top"
@@ -71,10 +57,11 @@
         android:inputType="textPersonName"
         android:padding="5dp"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/popup_location" />
+        app:layout_constraintTop_toBottomOf="@+id/popup_title"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_popupimage"
@@ -84,7 +71,7 @@
         app:cardCornerRadius="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/popup_description" >
+        app:layout_constraintTop_toBottomOf="@+id/popup_description">
 
         <ImageView
             android:id="@+id/popup_img"
@@ -112,5 +99,32 @@
             android:scaleType="fitXY"
             app:srcCompat="@drawable/ic_add" />
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/tvPostLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="22dp"
+        android:layout_marginBottom="14dp"
+        android:text="Current location:"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/popup_description"
+        app:layout_constraintEnd_toStartOf="@+id/btnEdit"
+        app:layout_constraintHorizontal_bias="0.167"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/popup_title"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btnEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit"
+        app:layout_constraintBottom_toTopOf="@+id/popup_description"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.938"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/popup_title"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
