--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
         android:background="@drawable/edittext_background"
         android:drawableLeft="@drawable/ic_red_person"
         android:ems="10"
-        android:hint="Username"
+        android:hint="Email address"
         android:inputType="textEmailAddress"
         android:padding="5dp"
         android:textSize="12sp"
