--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -4,35 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <EditText
         android:id="@+id/latitudeEdit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="15dp"
         android:hint="Latitude"
         android:inputType="numberDecimal|numberSigned"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
 
     <EditText
         android:id="@+id/longitudeEdit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:hint="Longitude"
         android:inputType="numberDecimal|numberSigned"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/latitudeEdit" />
 
-
     <EditText
         android:id="@+id/addressEdit"
-        android:layout_width="414dp"
-        android:layout_height="101dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:enabled="false"
         android:gravity="top"
         android:hint="Address"
@@ -48,6 +56,7 @@
         android:id="@+id/radioLocation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
         android:checked="true"
         android:onClick="onRadioButtonClicked"
         android:text="Use Coordinates"
@@ -61,7 +70,7 @@
         android:layout_height="wrap_content"
         android:onClick="onRadioButtonClicked"
         android:text="Use Address"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/addressEdit"
         app:layout_constraintStart_toEndOf="@+id/radioLocation"
         app:layout_constraintTop_toBottomOf="@+id/addressEdit" />
 
@@ -73,6 +82,7 @@
         android:layout_marginTop="24dp"
         android:onClick="onButtonClicked"
         android:text="Check coordinates"
+        android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="@+id/radioLocation"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toEndOf="@+id/radioLocation"
@@ -98,10 +108,13 @@
         app:layout_constraintTop_toTopOf="@+id/infoText" />
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Manually enter your location below"
-        app:layout_constraintBottom_toTopOf="@+id/latitudeEdit"
+        android:layout_marginTop="20dp"
+        android:text="Enter your Location"
+        android:textColor="@color/black"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
