--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -7,103 +7,90 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+
     <ImageButton
         android:id="@+id/btn_locationback"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="15dp"
         android:background="@color/red"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.083"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
+        app:layout_constraintVertical_bias="0.735"
         app:srcCompat="@drawable/ic_white_back" />
 
     <EditText
         android:id="@+id/latitudeEdit"
-        android:layout_width="0dp"
+        android:layout_width="382dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="45dp"
         android:hint="Latitude"
         android:inputType="numberDecimal|numberSigned"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-
     <EditText
         android:id="@+id/longitudeEdit"
-        android:layout_width="0dp"
+        android:layout_width="382dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
         android:hint="Longitude"
         android:inputType="numberDecimal|numberSigned"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/latitudeEdit" />
 
-    <EditText
-        android:id="@+id/addressEdit"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:enabled="false"
-        android:gravity="top"
-        android:hint="Address"
-        android:minLines="4"
-        android:scrollbars="vertical"
-        android:scrollHorizontally="false"
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="410dp"
+        android:layout_height="69dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/longitudeEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/addressEdit">
 
-    <RadioButton
-        android:id="@+id/radioLocation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:checked="true"
-        android:onClick="onRadioButtonClicked"
-        android:text="Use Coordinates"
-        app:layout_constraintBaseline_toBaselineOf="@+id/radioAddress"
-        app:layout_constraintEnd_toStartOf="@+id/radioAddress"
-        app:layout_constraintStart_toStartOf="parent" />
+        <RadioButton
+            android:id="@+id/radioLocation"
+            android:layout_width="203dp"
+            android:layout_height="69dp"
+            android:layout_marginStart="15dp"
+            android:checked="true"
+            android:onClick="onRadioButtonClicked"
+            android:text="Use Coordinates"
+            app:layout_constraintBaseline_toBaselineOf="@+id/radioAddress"
+            app:layout_constraintEnd_toStartOf="@+id/radioAddress"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <RadioButton
-        android:id="@+id/radioAddress"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:onClick="onRadioButtonClicked"
-        android:text="Use Address"
-        app:layout_constraintEnd_toEndOf="@+id/addressEdit"
-        app:layout_constraintStart_toEndOf="@+id/radioLocation"
-        app:layout_constraintTop_toBottomOf="@+id/addressEdit" />
+        <RadioButton
+            android:id="@+id/radioAddress"
+            android:layout_width="183dp"
+            android:layout_height="69dp"
+            android:onClick="onRadioButtonClicked"
+            android:text="Use Address"
+            app:layout_constraintEnd_toEndOf="@+id/addressEdit"
+            app:layout_constraintStart_toEndOf="@+id/radioLocation"
+            app:layout_constraintTop_toBottomOf="@+id/addressEdit" />
 
+    </RadioGroup>
 
     <Button
         android:id="@+id/actionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:onClick="onButtonClicked"
         android:text="Check coordinates"
         android:textAllCaps="true"
-        app:layout_constraintEnd_toEndOf="@+id/radioLocation"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toEndOf="@+id/radioLocation"
-        app:layout_constraintTop_toBottomOf="@+id/radioLocation" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <TextView
         android:id="@+id/infoText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actionButton" />
@@ -113,17 +100,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
-        app:layout_constraintEnd_toEndOf="@+id/actionButton"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="@+id/actionButton"
-        app:layout_constraintTop_toBottomOf="@+id/infoText" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.427"
+        app:layout_constraintStart_toEndOf="@+id/btn_locationback"
+        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
+        app:layout_constraintVertical_bias="0.893" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="48dp"
         android:text="Enter your Location"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -135,13 +123,26 @@
         android:id="@+id/btnSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="96dp"
         android:text="Submit location"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/infoText"
-        app:layout_constraintVertical_bias="0.279" />
+        app:layout_constraintTop_toBottomOf="@+id/infoText" />
+
+    <EditText
+        android:id="@+id/addressEdit"
+        android:layout_width="382dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:enabled="false"
+        android:gravity="top"
+        android:hint="Address"
+        android:minLines="4"
+        android:scrollbars="vertical"
+        android:scrollHorizontally="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/longitudeEdit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
