--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -103,7 +103,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Write Comment"
-        android:inputType="textPersonName"
+        android:inputType="text"
         app:layout_constraintStart_toEndOf="@+id/cv_post_detail_currentuser_img"
         app:layout_constraintTop_toBottomOf="@+id/post_detail_desc" />
 
